--- a/data-files/naver_review_crawling.ipynb
+++ b/data-files/naver_review_crawling.ipynb
@@ -2,9 +2,116 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8][1984 최동원]['이 영화를 보신 분들은 KBS가 만든 다큐 &amp;lt;철완 최동원, 시대와 승부하다&amp;gt;도 꼭 보시길 권한다. 지금 류현진이 속한 메이저리그 토론토 입단 싸인까지 했지만 당시 신군부가 KBO 흥행 위해 막아선 이야기, 자신보다 열악한 동려 선수들을 위해 미국 프로스포츠처럼 선수 노조(선수협)를 만들려다 재벌 구단들 미움 받아 트레이드 당한 이야기까지 인간 최동원을 제대로 아실 수 있다.']\n",
+      "[6][이터널스]['너무 지루해서 잠들었네요.. ']\n",
+      "[10][너에게 가는 길]['최고의 가족영화예요. 손수건을 안챙겨갔는데 눈물이 나서 혼났어요 또 봐야겠어요']\n",
+      "[8][이터널스]['기대를 전혀 하지 않아서 그런지 몰라도 볼만 했음.다만 앞으로의 이야기를 어떻게 이끌어갈지... 기대는 되는데 과연?']\n",
+      "[1][이터널스]['전형적인 중국 자본 짱개 영웅주의 영화입니다.어벤져스 이후 마블이 몰락이 보이네요..연기나 개연성이나 특히 연출 등 전반적으로 형편없는 영화입니다. 마동석이 차라리 출연을 거부하는게 좋았을 졸작이네요..']\n",
+      "[1][강릉]['개쓰레기 누아르 비추요']\n",
+      "[1][강릉]['이게 지리는 누아르 라고? 비추요 ']\n",
+      "[1][강릉]['개쓰레기 누아르 비추요']\n",
+      "[8][보이스]['공익영화. 시작 부분의 사건은 완벽하고 치밀했다. 중간중간 유치한 장면은 있지만 대사의 센스가 좋았다. 중국인과 조선족 좀 한국에서 없어졌으면']\n",
+      "[10][듄]['대서사시의 시작을 제대로 보여줬다']\n",
+      "[1][디어 에반 핸슨]['올해 본 영화 중 최악의 스토리^^']\n",
+      "[8][당신은 믿지 않겠지만]['각기 다른 나라의 두가족을 통해서 정치적인 이유로 현재 한일양국의 냉각된 분위기를 나타내고 소통함으로써 서서히 가까워지는 걸 표현하고 싶었던 영화같다 (그 일본 특유 감성의 이상한 천사만 등장안했어도 더 나았을 영화) 오다기리죠는 탑스타인데도 이런 소소한 영화에도 꾸준히 출연하는게 좋아보이고 한국인이 봐도 역시 연기가 어색하지 않은 얼마 안되는 일본인 배우 (근데 문득 일본인이 보는 서울이 저렇게 불친절한 인상일까?  궁금해지는 ...)']\n",
+      "[10][극장판 귀멸의 칼날: 무한열차편]['모든게 완벽한 애니 연출, 성우들, 화려한 전투신 ']\n",
+      "[10][도쿄의 밤하늘은 항상 가장 짙은 블루]['좋은 영화 좋은영화 좋은영화']\n",
+      "[10][듄]['']\n",
+      "[10][메이즈 러너]['너무 재밌어서 영화관에서 3번 봤음!']\n",
+      "[10][괴짜들의 로맨스]['설정 만으로도 너무 사랑스러운 영화!']\n",
+      "[10][초콜릿]['정말 따뜻하고 재밌고 좋은 영화네요. 꼭 자극적이지 않아도 얼마든지 재밌을 수 있다는 것을 보여줬어요. 지금보니 카모메 식당, 미드 굿 위치등이 이 영화에서 소재를 따온 것 같습니다.']\n",
+      "[8][국도극장]['']\n",
+      "[7][이터널스]['다른 마블에 비해 뭐랄까 액션이나 스토리가 조금 떨어졌지만 충분히 볼만은 했음']\n",
+      "[10][스파이더맨]['이 영화.솔직히 최고의 철학관을 가진 슈퍼히어로영화에 포함되도 어색함이 전혀 없다.']\n",
+      "[7][이터널스]['평점 덕에 기대를 아주 낮추고 가서 그런지 생각보다 괜찮았음 어떻게든 깔 걸 찾으려고 봤는데 생각보다 괜찮았음...평소 마블보다 별로긴함 ']\n",
+      "[7][레드 노티스]['그냥 킬링타임용ㅋㅋ기대하면 망함']\n",
+      "[8][뉴 오더]['충격적인 스토리 청불영화']\n",
+      "[7][소리도 없이]['마지막 초희의 웃음과 태인의 허탈한 표정은 정말 압권이였다']\n",
+      "[10][아담스 패밀리 2]['그래픽이 좋았다 캐릭터재미']\n",
+      "[10][아가씨]['박찬욱이 거장이라 불리는 이유']\n",
+      "[2][샹치와 텐 링즈의 전설]['참을수없는모든것의 종합선물세트']\n",
+      "[6][나이브스 아웃]['다양한 사랑의 형태']\n",
+      "[10][너에게 가는 길]['눈부시게 아름다운 그녀들의 성장일기.']\n",
+      "[9][이터널 선샤인]['나의 기억 속 당신은 지금의 당신과 얼마나 다른가요']\n",
+      "[2][장르만 로맨스]['재미 드럽게 없음.  알바들한테 속음']\n",
+      "[6][디어 에반 핸슨]['뮤지컬 영화라 기대했는데 뭔가 아쉽다']\n",
+      "[6][장르만 로맨스]['유쾌한 한국영화의 전형일거라 생각했는데 관계에대한 생각을 할수있었다']\n",
+      "[4][강릉]['장혁입담배연기가 좀 그렇네예...장혁밑에 연기자들도 건달연기가 그렇네예...']\n",
+      "[4][장르만 로맨스]['']\n",
+      "[6][샹치와 텐 링즈의 전설]['샹치 친구가 갑자기 궁예가 된다든가링 아빠한테 받자마자 연습하나도 안했는데 마스터한다든지 등등 개연성 밥말아 먹고 만든듯']\n",
+      "[9][파이란]['세상에 이런 사랑도 있다. 인간과 인간 사이의 정에 관한 이야기. 송해성 감독, 최민식 배우 모두에게 최고작.']\n",
+      "[7][아네트]['생각과 다른전개로 이야기가 이어졌지만 지루하지않고 신선했다']\n",
+      "[8][고장난 론]['전반적으로 지루했지만 론이 계속 생각난다 ~~ 띠끼띠끼 따까따까 뚜꾸뚜꾸 뚜우우우~~~~']\n",
+      "[6][베놈 2: 렛 데어 비 카니지]['코믹스를 실사화해서 영화로 볼 수 있다는것만 해도 어디긴 하나~원작에 그 잔인하고 폭력적인 카니지와 베놈만의 특유한 맛은 없는듯...ㅠㅠ 다른 분들이 지적하듯이 과감하게 19세로 가서 유혈이 낭자하고 좀 더 그로테스크 하고 폭력적인 성인만의 영화로 거듭나는것은 어떨지..']\n",
+      "[10][고양이에게 밥을 주지 마세요]['우리의 이웃입니다. 같이 공존합시다.']\n",
+      "[8][프렌치 디스패치]['그랜드부다페스트가 생각나는 특이한 영화']\n",
+      "[8][호빗 : 뜻밖의 여정]['예전에 봤던걸 다시보니까 또 새로운느낌? 스마우그도  기대되용']\n",
+      "[10][귀멸의 칼날: 나타구모산 편 ]['탄지로가 히노카미 카구라를 할때는 집에서 볼때와 다른 벅차오름이 있네요ㅎㅎㅎ귀칼 뽕이 차오릅니다 ^-^']\n",
+      "[6][이터널스]['스토리가 좀 루즈해져서 아쉬웠지만 액션씬은 괜찮았다']\n",
+      "[10][고양이에게 밥을 주지 마세요]['기회가 되면 한번 보고 싶은 영화']\n",
+      "[9][귀멸의 칼날: 남매의 연]['남매의 연이 초반부 이야기지만 서막같은 느낌이라 극장에서 보니 좋네요']\n",
+      "[10][고양이에게 밥을 주지 마세요]['힘든 길생활  모든 사람들이  공감하고길냥이들의 삶이 조금이라도 나아지길  바랍니다.']\n",
+      "[10][장르만 로맨스]['비슷한 류의 기존 영화에 비해 과장된 상황 연출이 없고, 가볍고 자연스럽게 표현함.극적 상황이 부족한 것으로 인해 늘어지는 부분은 미친 연기력으로 커버 함.무거운 주제에 비해 가벼운 연출과 간간히 나오는 개그가 자연스럽고 좋았음.']\n",
+      "[6][아야와 마녀]['지브리 스튜디오 특유의 작품내에 감독이 그려넣은 의미가 들어있었는데 이번작은 잘모르겠어요 너무 단순하다고도 생각되고요 어색한 느낌도 있었지만그래도 새로운 cg애니의 도전은 칭찬합니다']\n",
+      "[5][이스턴 프라미스]['']\n",
+      "[9][케빈에 대하여]['아버지는 뭐하고 있었냐고?  아버지가 한것이 없기 때문이 이 영화가 만들어진 거잖아...']\n",
+      "[10][듄]['아이맥스에서 볼때 가장 완벽해지는 영화']\n",
+      "[8][장르만 로맨스]['']\n",
+      "[3][디어 에반 핸슨]['주인공 에반의 행동에 공감되지 않는다. 남들을 속이면서 본인의 성취감을 충족하는 내용에 소름이 끼친다. 그는 전형적인 &amp;#39;리플리 증후군&amp;#39;을 가진 사람의 행동을 서슴없이 보여준다.']\n",
+      "[10][하모니]['겁나 슬프고 감동적이에요 ㅠㅠ ㅈㄴ짜 집중해서 보면 눈물 터지는데가 3~4군데 있는데 진짜 슬퍼요.. ㅠㅠ 배우들 연기도 너무 짱이고 스토리는 예상이 가긴 가는데 그래도 너무 재미있어요 ㅠㅠ 진짜 영화보면서 이렇게 운건 처음에요.. ㅠ']\n",
+      "[6][레드 노티스]['생각없이 킬링타임용으로 안성탕면']\n",
+      "[6][디어 에반 핸슨]['내 인생 최고의 고구마 영화 ']\n",
+      "[8][소년 아메드]['우리의 사회가 이아이를 어떻게 살펴야 하는지 상당히 무겁게 느껴진다']\n",
+      "[10][그것만이 내 세상]['오랜만에봤는데도 눈물나네ㅠ']\n",
+      "[1][걸캅스]['장르 환타지  영화']\n",
+      "[10][기적]['재밌네 올만에 유치하지않고 재밌는 감동있는 영화를 지금봐서 아쉽지만 지금이라서 봐서 다행! 꼭보세요 ^^']\n",
+      "[7][프렌치 디스패치]['']\n",
+      "[10][이터널스]['사람들이 마블영화 중에 가장 노잼이라고 하는건 기존의 오락영화 스타일 마블이 대다수라서 그렇고...나름 감독이 추구하는 관용과 다양성에 대해서 표현 잘했다고 생각함. 뭐 지루할 수 있는건 개인차인데 애초에 1편이라 서사가 좀 필요한 건 어쩔 수 없음']\n",
+      "[5][이터널스]['마블리 보러 갔음.. 별로 재미는 없었음']\n",
+      "[1][이터널스]['진짜 의리 아니였음 안봤다']\n",
+      "[8][프렌치 디스패치]['잡지섹션을 영상예술로 풀어놓는 웨스앤더슨식 인문사회탐구.줄줄이사탕처럼 등장하는 배우들보는 맛도 꽤 달콤하다. ']\n",
+      "[8][남자가 사랑할 때]['연기, 연출 잘들 찍었네']\n",
+      "[10][듄]['']\n",
+      "[9][남한산성]['잘만든 사극영화지루하다고 생각될수도 있겠으나연기와 내용의 깊이가 좋음']\n",
+      "[10][디어 에반 핸슨]['']\n",
+      "[9][다가오는 것들]['새로운길 과 계절을 맞이할 줄 아는 품위']\n",
+      "[7][신과함께-인과 연]['전편보다 좀 아쉬운 속편이었어요.']\n",
+      "[1][이터널스]['마블 영화는 다 보는데 이건 마블 영화중에 최악....동석씨땜에 겨우 봤음....']\n",
+      "[10][강릉]['장혁 연기 좋아요 영화도 볼만함']\n",
+      "[4][무수단]['시간아까워 다른거 보는게 좋아']\n",
+      "[10][보이스]['전국민이 꼭 봐야할 영화']\n",
+      "[4][랑종]['초반에 지루하고 막판에 터짐 근데 왜 갑자기 좀비물이 되는건지... 그리고 너무 자극적인 요소는 다 때려박은 느낌 너무 잔인해서 기분안좋음 님과 밍의 연기력만 기억남음 ']\n",
+      "[10][뱅드림! 필름 라이브 세컨드 스테이지]['여태까지 봤던 뱅드림 극장판중에서 최고였어요!! 기회가 된다면 또 보러 가고싶네요']\n",
+      "[10][귀멸의 칼날: 남매의 연]['명작이니까 그냥 한번 더 봐라 말들이 많네']\n",
+      "[7][이터널스]['좋아하는 배우들이 나와서 봤는데 재미있었어요. 후편이 더 재밌을 것 같아요.']\n",
+      "[10][너에게 가는 길]['사람이 살아가는, 살아가야 하는 이야기']\n",
+      "[8][호빗 : 뜻밖의 여정]['초반부는 살짝 지루했지만 뒤로 갈수록 흥미진진한 스토리가 펼쳐짐 영상미는 정말 최고']\n",
+      "[4][샹치와 텐 링즈의 전설]['으아...이게 뭔 마블이야...개연성 개나줬네일반인 즁궈여자는 왜 데리고 다니는거야 하....최악']\n",
+      "[6][이터널스]['진짜 이래서... 경험이 매우 부족한 새내기에게는, 그가 어떤 재능을 가진걸로 보이던, 무게가 큰 업무를 맡기면 안되는 것임. 사실상 두번째 작품인데 무리수만 두고 히어로물에 대한 기본적인 이해도 없이 시원하게 말아먹음. 수천달러 공중분해. 성인들을 위한 어두운 히어로영화? 그런건 아무나 찍나. 놀란급은 되니까 다크나이트같은 대작이 나온것이지. ']\n",
+      "[1][장르만 로맨스]['코미디 생각하고 가지마세요코미디장르 아닙니다. 진짜 최악의 영화 지금 김포한강신도시 메가박스에서 보고  있는데 정말 재미없다ㅜ 돈 아깝다']\n",
+      "[8][라스트 듀얼: 최후의 결투]['거장이 남긴 명확한 메세지']\n",
+      "[8][이터널스]['그럭저럭 볼만했어요. 다음편이 기대됩니다.']\n",
+      "[10][해바라기]['내 인생 최고의 영화.남자들의 모든 로망과 감성을 자극하는 대 서사시강석범 감독님 이런 영화 또 만들어주세요.스토리 빌드업, 주인공, 조연, 모든게 옛날이나 지금이나 최고인듯. 개봉당시 홍보만 똑바로 했다면 500-700만은 우습게 달성했을 작품. 감독님을 위해 시간날때 마다 보게되는 영화']\n",
+      "[8][디어 에반 핸슨]['솔직한 후기로, 잔잔하게 보기에 괜찮은 영화,스토리는 뻔하지만 그만의 또 전달하려는 내용이 따뜻해서 나쁘지 않게 보았음']\n",
+      "[1][아미 오브 더 데드]['결론부터말하면 시간아깝다 보지마세요. 킬링타임용이란 말도 믿지않길추천..!!처음 시작은 흐음..하면서 넘길만했다 cg자체도 잘했다 다만 스토리가 정말정말 별로다. 중반쯤 갔을때부터 주인공 딸이 말도 안되는 억지부리기 시작하면서부터 진짜 끝까지 발암 결국 딸덕분에 다 죽고 지혼자 산다. 그외에도 말도안되는 답답한 설정들과 캐릭터 붕괴가 너무많다 시간이 아깝다는 말밖에는 할말이없다. ']\n",
+      "[4][이터널스]['황당한 설정과 매끄럽지 못한데다 지루해서 졸았다.']\n",
+      "[10][듄]['별 기대 없이 관람하러 갔는데 한 순간도 눈을 떼지 못할 정도로 영화에 빠져들었습니다.   2편을 기대하는 마음으로 영화관을 나왔습니다.  얼른 2편을 관람하고 싶습니다.  추천드려요.']\n",
+      "[6][디어 에반 핸슨]['음악은 너무 좋지만 핀트가 나가버린 감동스토리']\n",
+      "[8][레드 노티스]['킬링타임용으로 재미있게봤네요ㅎㅎ']\n",
+      "[10][호소자]['배우들 연기하는게 너무 귀여워요']\n",
+      "[1][샹치와 텐 링즈의 전설]['마블? 이 영화 한편 보는데 3일 걸렸네요불면증 있으신분들께 추천합니다']\n",
+      "[10][고양이에게 밥을 주지 마세요]['사랑스럽고 작은 우리의 이웃입니다. ']\n",
+      "[10][듄]['이게영화지이게영화지 너무재밌음 2편언제나와. ㅠㅠ']\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -38,8 +145,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "dfc1d8b9e40561b450c0b6847750c6fdfeb99218189e9277504933eee44f7507"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.11 64-bit ('kdigital-busan': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
