--- a/data-files/now_playing.ipynb
+++ b/data-files/now_playing.ipynb
@@ -28,6 +28,32 @@
     "    for result in row['results']:\n",
     "        movies.append(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "popular_movies = []\n",
+    "for i in range(20000,700000):\n",
+    "    url=\"https://api.themoviedb.org/3/movie/{0}?api_key={1}&language=ko-KR\".format(i,'5ecfbcb3280f5e9f7898c3ca00acca81')\n",
+    "    response = requests.get(url)\n",
+    "    popular_movies.append(json.loads(response.content))\n",
+    "    \n",
+    "    if i == 99999 :\n",
+    "        break\n",
+    "    time.sleep(0.5)\n",
+    "\n",
+    "popular_movies\n",
+    "tmdbmovielist = pd.DataFrame(popular_movies)\n",
+    "tmdbmovielist.to_csv(\"tmdbmovielist(20000-99999).csv\", header=True, index=True)"
+   ]
   }
  ],
  "metadata": {
