--- a/data-files/team3_data_collection_since2010.ipynb
+++ b/data-files/team3_data_collection_since2010.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
    "source": [
     "#영화장르 정보\n",
     "\n",
-    "genre_url=\"https://api.themoviedb.org/3/genre/movie/list?api_key=36927ad1d2817ff0fa31947e47d186fd&language=ko-KR\"\n",
+    "genre_url=\"https://api.themoviedb.org/3/genre/movie/list?api_key=5ecfbcb3280f5e9f7898c3ca00acca81&language=ko-KR\"\n",
     "response = requests.get(genre_url)\n",
     "json_object = response.content\n",
     "genre_data = json.loads(json_object)\n",
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install pymysql\n",
     "\n",
     "conn = pymysql.connect(host=\"localhost\",\n",
-    "                       database=\"finalteam3\",\n",
+    "                       database=\"demoweb2\",\n",
     "                       user=\"kdigital\",\n",
     "                       password=\"mysql\",\n",
     "                       charset=\"utf8\")\n",
