insert movie data update

--- a/scripts/insert_movie_data.ipynb
+++ b/scripts/insert_movie_data.ipynb
@@ -12,25 +12,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies = pd.read_csv('../data-files/tmdbmovielist(1-6999).csv', encoding=\"utf-8\", lineterminator=\"\\n\")\n",
+    "movies = pd.read_csv('../data-files/tmdbmovielist(100000-149999).csv', encoding=\"utf-8\")\n",
     "movies.drop(movies.columns[0], axis=1, inplace=True)\n",
-    "movies2 = movies[movies['status_message'].isna()] # 정ㄱ상적인 아이들만 "
+    "movies2 = movies[movies['status_message'].isna()] # 정ㄱ상적인 아이들만 \n",
+    "movies2 = movies2.drop(['success', 'status_code', 'status_message'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'개인적인 여정을 고요하게 담은 영화. 배가 아르헨티나 최남단 지점에 정박하자, 선원인 패럴은 어머니의 생사를 확인하려고 20년만에 고향을 방문한다. 패럴은 술을 마시면서 시간을 보내다 집에 도착한다. 하지만 20년 만에 돌아온 집에서 노환으로 누운 어머니를 만나는 기쁨도 잠시, 패럴은 예상치도 못했던 가족의 비밀을 알게 된다.\\U00100003리산드로 알론소 감독은 전통적인 관찰 방식으로 패럴의 무심함을 관찰한다. 카메라가 담은 패럴의 삶은 지루하고, 그는 남겨두고 온 사람들에 대해 무還？求? 아르헨티나의 설원을 익스트림 롱샷으로 담은 장면에서 패럴의 침묵과 느릿한 걸음걸이는 영화의 차가운 기운과 어울린다. 시종일관 정적으로 움직이는 카메라는 패럴의 삶뿐만 아니라 우리의 삶이 더 나아갈 곳이 없다는 것을 보여준다. 서서히 비극을 전개하면서, 패럴이 고뇌하는 순간마다 미세한 감정을 잡아내는 연출력이 돋보이는 작품이다.'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies2[movies2['id']==101006][\"overview\"].values[0].encode('utf-8').decode(\"utf-8\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50000 entries, 0 to 49999\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   success                24022 non-null  object \n",
+      " 1   status_code            24022 non-null  float64\n",
+      " 2   status_message         24022 non-null  object \n",
+      " 3   adult                  25978 non-null  object \n",
+      " 4   backdrop_path          9250 non-null   object \n",
+      " 5   belongs_to_collection  1173 non-null   object \n",
+      " 6   budget                 25978 non-null  float64\n",
+      " 7   genres                 25978 non-null  object \n",
+      " 8   homepage               2751 non-null   object \n",
+      " 9   id                     25978 non-null  float64\n",
+      " 10  imdb_id                22483 non-null  object \n",
+      " 11  original_language      25978 non-null  object \n",
+      " 12  original_title         25978 non-null  object \n",
+      " 13  overview               1309 non-null   object \n",
+      " 14  popularity             25978 non-null  float64\n",
+      " 15  poster_path            19020 non-null  object \n",
+      " 16  production_companies   25978 non-null  object \n",
+      " 17  production_countries   25978 non-null  object \n",
+      " 18  release_date           25179 non-null  object \n",
+      " 19  revenue                25978 non-null  float64\n",
+      " 20  runtime                25645 non-null  float64\n",
+      " 21  spoken_languages       25978 non-null  object \n",
+      " 22  status                 25978 non-null  object \n",
+      " 23  tagline                451 non-null    object \n",
+      " 24  title                  25978 non-null  object \n",
+      " 25  video                  25978 non-null  object \n",
+      " 26  vote_average           25978 non-null  float64\n",
+      " 27  vote_count             25978 non-null  float64\n",
+      "dtypes: float64(8), object(20)\n",
+      "memory usage: 10.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 25978 entries, 9 to 49997\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   adult                  25978 non-null  object \n",
+      " 1   backdrop_path          9250 non-null   object \n",
+      " 2   belongs_to_collection  1173 non-null   object \n",
+      " 3   budget                 25978 non-null  float64\n",
+      " 4   genres                 25978 non-null  object \n",
+      " 5   homepage               2751 non-null   object \n",
+      " 6   id                     25978 non-null  float64\n",
+      " 7   imdb_id                22483 non-null  object \n",
+      " 8   original_language      25978 non-null  object \n",
+      " 9   original_title         25978 non-null  object \n",
+      " 10  overview               1309 non-null   object \n",
+      " 11  popularity             25978 non-null  float64\n",
+      " 12  poster_path            19020 non-null  object \n",
+      " 13  production_companies   25978 non-null  object \n",
+      " 14  production_countries   25978 non-null  object \n",
+      " 15  release_date           25179 non-null  object \n",
+      " 16  revenue                25978 non-null  float64\n",
+      " 17  runtime                25645 non-null  float64\n",
+      " 18  spoken_languages       25978 non-null  object \n",
+      " 19  status                 25978 non-null  object \n",
+      " 20  tagline                451 non-null    object \n",
+      " 21  title                  25978 non-null  object \n",
+      " 22  video                  25978 non-null  object \n",
+      " 23  vote_average           25978 non-null  float64\n",
+      " 24  vote_count             25978 non-null  float64\n",
+      "dtypes: float64(7), object(18)\n",
+      "memory usage: 5.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/kdigital-pusan/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "(movies['vote_count'] == 0).sum()\n",
+    "(movies2['vote_count'] == 0).sum()\n",
+    "movies2['vote_count2'] = movies2['vote_count'].apply(lambda ov : str(ov))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(movies2['vote_count2'] == 'nan').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +205,19 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"\n"
+      "  \"\"\"\n",
+      "/opt/anaconda3/envs/kdigital-pusan/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/opt/anaconda3/envs/kdigital-pusan/lib/python3.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
      ]
     }
    ],
@@ -57,7 +226,9 @@
     "\n",
     "# movies2['original_language'] = movies2['original_language'].apply(lambda ol: ol if ol else '')\n",
     "movies2['overview'] = movies2['overview'].apply(lambda ov : ov if str(ov) != 'nan' else '')\n",
-    "movies2['release_date'] = movies2['release_date'].apply(lambda ov : ov if str(ov) != 'nan' else '')"
+    "movies2['release_date'] = movies2['release_date'].apply(lambda ov : ov if str(ov) != 'nan' else '')\n",
+    "movies2['vote_average'] = movies2['vote_average'].apply(lambda ov : ov if str(ov) != 'nan' else 0)\n",
+    "movies2['vote_count'] = movies2['vote_count'].apply(lambda ov : ov if str(ov) != 'nan' else 0)"
    ]
   },
   {
