update insert movie data3

--- a/scripts/insert_movie_data3.ipynb
+++ b/scripts/insert_movie_data3.ipynb
@@ -193,6 +193,8 @@
     "# 2. get command object\n",
     "cursor = conn.cursor()\n",
     "\n",
+    "#cursor.execute(\"delete from movie\") #기존 데이터를 지울 때 주석을 풀어주세요 \n",
+    "\n",
     "error_list = []\n",
     "        \n",
     "for file in files:\n",
