--- a/data-files/team3_data_collection_since2010.ipynb
+++ b/data-files/team3_data_collection_since2010.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +167,15 @@
     "movies_2020_modified.rename(columns={'id':'movie_id', 'original_title':'subtitle', 'poster_path': 'posterpath'}, inplace=True)   # 컬럼이름을 DB컬럼이름과 통일. \n",
     "\n",
     "#movies_2020_modified.info()   #458 entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df_1=pd.concat([movies_2021_modified, movies_2020_modified], ignore_index=True)"
    ]
   },
   {
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +259,15 @@
     "\n",
     "#movies_2019_modified.info() # 458 entries\n",
     "#movies_2019_modified.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_2=pd.concat([movies_df_1, movies_2019_modified], ignore_index=True)"
    ]
   },
   {
@@ -310,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,6 +351,15 @@
     "\n",
     "#movies_2018_modified.info() # 707 entries\n",
     "#movies_2018_modified.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_3=pd.concat([movie_df_2, movies_2018_modified], ignore_index=True)"
    ]
   },
   {
@@ -393,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +443,15 @@
     "\n",
     "#movies_2017_modified.info() # 719 entries\n",
     "#movies_2017_modified.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_4=pd.concat([movie_df_3, movies_2017_modified], ignore_index=True)"
    ]
   },
   {
@@ -476,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,6 +535,15 @@
     "\n",
     "#movies_2016_modified.info() # 673 entries\n",
     "#movies_2016_modified.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_5=pd.concat([movie_df_4, movies_2016_modified], ignore_index=True)"
    ]
   },
   {
@@ -559,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,6 +627,15 @@
     "\n",
     "# movies_2015_modified.info() # 626 entries\n",
     "# movies_2015_modified.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_6=pd.concat([movie_df_5, movies_2015_modified], ignore_index=True)"
    ]
   },
   {
@@ -641,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,6 +718,16 @@
     "\n",
     "#ovies_2010_2014_modified.info() # 2636 entries\n",
     "#movies_2010_2014_modified.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df_7=pd.concat([movie_df_6, movies_2010_2014_modified], ignore_index=True)\n",
+    "movie_2010_2021= movie_df_7.to_csv(\"movies_2010_2021\")"
    ]
   },
   {
@@ -721,6 +785,13 @@
     "cursor.close()\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
