--- a/scripts/team3_data_collection_since2010.ipynb
+++ b/scripts/team3_data_collection_since2010.ipynb
@@ -14,48 +14,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:data-files/team3_data_collection_since2010.ipynb
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#genre information crawling (for genre table)\n",
-=======
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       id   name\n",
-      "0      28     액션\n",
-      "1      12     모험\n",
-      "2      16  애니메이션\n",
-      "3      35    코미디\n",
-      "4      80     범죄\n",
-      "5      99  다큐멘터리\n",
-      "6      18    드라마\n",
-      "7   10751     가족\n",
-      "8      14    판타지\n",
-      "9      36     역사\n",
-      "10     27     공포\n",
-      "11  10402     음악\n",
-      "12   9648   미스터리\n",
-      "13  10749    로맨스\n",
-      "14    878     SF\n",
-      "15  10770  TV 영화\n",
-      "16     53    스릴러\n",
-      "17  10752     전쟁\n",
-      "18     37     서부\n"
-     ]
-    }
-   ],
-   "source": [
-    "#영화장르 정보\n",
->>>>>>> 5357b64c86308e7957902b84eb18aee2e22423bd:scripts/team3_data_collection_since2010.ipynb
     "\n",
-    "genre_url=\"https://api.themoviedb.org/3/genre/movie/list?api_key=5ecfbcb3280f5e9f7898c3ca00acca81&language=ko-KR\"\n",
+    "genre_url=\"https://api.themoviedb.org/3/genre/movie/list?api_key=36927ad1d2817ff0fa31947e47d186fd&language=ko-KR\"\n",
     "response = requests.get(genre_url)\n",
     "json_object = response.content\n",
     "genre_data = json.loads(json_object)\n",
@@ -67,11 +32,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:data-files/team3_data_collection_since2010.ipynb
    "execution_count": null,
-=======
-   "execution_count": 5,
->>>>>>> 5357b64c86308e7957902b84eb18aee2e22423bd:scripts/team3_data_collection_since2010.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +40,7 @@
     "#!pip install pymysql\n",
     "\n",
     "conn = pymysql.connect(host=\"localhost\",\n",
-    "                       database=\"demoweb2\",\n",
+    "                       database=\"finalteam3\",\n",
     "                       user=\"kdigital\",\n",
     "                       password=\"mysql\",\n",
     "                       charset=\"utf8\")\n",
