--- a/scripts/team3_data_EDA_since2010.ipynb
+++ b/scripts/team3_data_EDA_since2010.ipynb
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2010.01.01~2021.11.26 영화리스트 csv파일 불러오기 \n",
-    "movies = pd.read_csv(r'C:\\team3_data\\project-team3-data\\data-files\\movies_2010_2021')"
+    "movies = pd.read_csv(r'C:\\team3_data\\project-team3-data\\data-files\\movies_2010_2021.csv',index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -43,24 +43,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6724 entries, 0 to 6723\n",
-      "Data columns (total 12 columns):\n",
+      "Int64Index: 6727 entries, 0 to 6726\n",
+      "Data columns (total 11 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   Unnamed: 0         6724 non-null   int64  \n",
-      " 1   genre_ids          6724 non-null   object \n",
-      " 2   movie_id           6724 non-null   int64  \n",
-      " 3   original_language  6724 non-null   object \n",
-      " 4   subtitle           6724 non-null   object \n",
-      " 5   overview           5328 non-null   object \n",
-      " 6   popularity         6724 non-null   float64\n",
-      " 7   posterpath         6723 non-null   object \n",
-      " 8   release_date       6724 non-null   object \n",
-      " 9   title              6724 non-null   object \n",
-      " 10  vote_average       6724 non-null   float64\n",
-      " 11  vote_count         6724 non-null   int64  \n",
-      "dtypes: float64(2), int64(3), object(7)\n",
-      "memory usage: 630.5+ KB\n"
+      " 0   genre_ids          6727 non-null   object \n",
+      " 1   movie_id           6727 non-null   int64  \n",
+      " 2   original_language  6727 non-null   object \n",
+      " 3   subtitle           6727 non-null   object \n",
+      " 4   overview           5334 non-null   object \n",
+      " 5   popularity         6727 non-null   float64\n",
+      " 6   posterpath         6726 non-null   object \n",
+      " 7   release_date       6727 non-null   object \n",
+      " 8   title              6727 non-null   object \n",
+      " 9   vote_average       6727 non-null   float64\n",
+      " 10  vote_count         6727 non-null   int64  \n",
+      "dtypes: float64(2), int64(2), object(7)\n",
+      "memory usage: 630.7+ KB\n"
      ]
     }
    ],
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +93,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>genre_ids</th>\n",
        "      <th>movie_id</th>\n",
        "      <th>original_language</th>\n",
@@ -110,74 +108,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6719</th>\n",
-       "      <td>6719</td>\n",
+       "      <th>6722</th>\n",
        "      <td>[18, 10752]</td>\n",
        "      <td>227306</td>\n",
        "      <td>en</td>\n",
        "      <td>Unbroken</td>\n",
        "      <td>우유병에 술을 담아 마시고 몰래 담배를 피우며 꿈도, 미래에 대한 열정도 없던 반항...</td>\n",
-       "      <td>19.650</td>\n",
+       "      <td>28.042</td>\n",
        "      <td>/m0QWz9J6wy7vCYpWH9pMR8JPOLZ.jpg</td>\n",
        "      <td>2014-12-25</td>\n",
        "      <td>언브로큰</td>\n",
        "      <td>7.5</td>\n",
-       "      <td>3356</td>\n",
+       "      <td>3357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6720</th>\n",
-       "      <td>6720</td>\n",
+       "      <th>6723</th>\n",
        "      <td>[10752, 28]</td>\n",
        "      <td>190859</td>\n",
        "      <td>en</td>\n",
        "      <td>American Sniper</td>\n",
        "      <td>녹색 얼굴의 악마들, 전쟁의 종결자 네이비 실 사이에서도 전설이라 불렸던 남자 ‘크...</td>\n",
-       "      <td>89.939</td>\n",
+       "      <td>103.293</td>\n",
        "      <td>/pKbOLUANgHiiSjC7qs6AXfzW9cX.jpg</td>\n",
        "      <td>2014-12-25</td>\n",
        "      <td>아메리칸 스나이퍼</td>\n",
        "      <td>7.4</td>\n",
-       "      <td>10650</td>\n",
+       "      <td>10658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6721</th>\n",
-       "      <td>6721</td>\n",
+       "      <th>6724</th>\n",
        "      <td>[53, 27, 18]</td>\n",
        "      <td>288158</td>\n",
        "      <td>en</td>\n",
        "      <td>The Woman in Black 2: Angel of Death</td>\n",
        "      <td>한 명, 두 명 아이들이 사라지기 시작한다.  1941년 런던, 전쟁의 공습을 피해...</td>\n",
-       "      <td>20.291</td>\n",
+       "      <td>20.306</td>\n",
        "      <td>/gJcV7dfAW8ccwjxDPEnruFnKAyI.jpg</td>\n",
        "      <td>2014-12-30</td>\n",
        "      <td>우먼 인 블랙: 죽음의 천사</td>\n",
        "      <td>5.2</td>\n",
-       "      <td>857</td>\n",
+       "      <td>858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6722</th>\n",
-       "      <td>6722</td>\n",
+       "      <th>6725</th>\n",
        "      <td>[80, 18, 53]</td>\n",
        "      <td>241239</td>\n",
        "      <td>en</td>\n",
        "      <td>A Most Violent Year</td>\n",
        "      <td>\"뛰어내리기가 무서울 때 바로 그때가 뛰어내릴 때죠\" 원하는 것은 기필코 갖는 남자...</td>\n",
-       "      <td>18.403</td>\n",
+       "      <td>18.180</td>\n",
        "      <td>/1u1mjji8WPBFGRVg5xhVwG9dlhm.jpg</td>\n",
        "      <td>2014-12-30</td>\n",
        "      <td>모스트 바이어런트</td>\n",
        "      <td>6.6</td>\n",
-       "      <td>1121</td>\n",
+       "      <td>1124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6723</th>\n",
-       "      <td>6723</td>\n",
+       "      <th>6726</th>\n",
        "      <td>[35]</td>\n",
        "      <td>298614</td>\n",
        "      <td>fr</td>\n",
        "      <td>Une heure de tranquillité</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.867</td>\n",
+       "      <td>8.730</td>\n",
        "      <td>/d5csriJUa3Evyv8r2IJANnuJlE.jpg</td>\n",
        "      <td>2014-12-31</td>\n",
        "      <td>Une heure de tranquillité</td>\n",
@@ -189,43 +182,43 @@
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0     genre_ids  movie_id original_language  \\\n",
-       "6719        6719   [18, 10752]    227306                en   \n",
-       "6720        6720   [10752, 28]    190859                en   \n",
-       "6721        6721  [53, 27, 18]    288158                en   \n",
-       "6722        6722  [80, 18, 53]    241239                en   \n",
-       "6723        6723          [35]    298614                fr   \n",
+       "         genre_ids  movie_id original_language  \\\n",
+       "6722   [18, 10752]    227306                en   \n",
+       "6723   [10752, 28]    190859                en   \n",
+       "6724  [53, 27, 18]    288158                en   \n",
+       "6725  [80, 18, 53]    241239                en   \n",
+       "6726          [35]    298614                fr   \n",
        "\n",
        "                                  subtitle  \\\n",
-       "6719                              Unbroken   \n",
-       "6720                       American Sniper   \n",
-       "6721  The Woman in Black 2: Angel of Death   \n",
-       "6722                   A Most Violent Year   \n",
-       "6723             Une heure de tranquillité   \n",
+       "6722                              Unbroken   \n",
+       "6723                       American Sniper   \n",
+       "6724  The Woman in Black 2: Angel of Death   \n",
+       "6725                   A Most Violent Year   \n",
+       "6726             Une heure de tranquillité   \n",
        "\n",
        "                                               overview  popularity  \\\n",
-       "6719  우유병에 술을 담아 마시고 몰래 담배를 피우며 꿈도, 미래에 대한 열정도 없던 반항...      19.650   \n",
-       "6720  녹색 얼굴의 악마들, 전쟁의 종결자 네이비 실 사이에서도 전설이라 불렸던 남자 ‘크...      89.939   \n",
-       "6721  한 명, 두 명 아이들이 사라지기 시작한다.  1941년 런던, 전쟁의 공습을 피해...      20.291   \n",
-       "6722  \"뛰어내리기가 무서울 때 바로 그때가 뛰어내릴 때죠\" 원하는 것은 기필코 갖는 남자...      18.403   \n",
-       "6723                                                NaN       4.867   \n",
+       "6722  우유병에 술을 담아 마시고 몰래 담배를 피우며 꿈도, 미래에 대한 열정도 없던 반항...      28.042   \n",
+       "6723  녹색 얼굴의 악마들, 전쟁의 종결자 네이비 실 사이에서도 전설이라 불렸던 남자 ‘크...     103.293   \n",
+       "6724  한 명, 두 명 아이들이 사라지기 시작한다.  1941년 런던, 전쟁의 공습을 피해...      20.306   \n",
+       "6725  \"뛰어내리기가 무서울 때 바로 그때가 뛰어내릴 때죠\" 원하는 것은 기필코 갖는 남자...      18.180   \n",
+       "6726                                                NaN       8.730   \n",
        "\n",
        "                            posterpath release_date  \\\n",
-       "6719  /m0QWz9J6wy7vCYpWH9pMR8JPOLZ.jpg   2014-12-25   \n",
-       "6720  /pKbOLUANgHiiSjC7qs6AXfzW9cX.jpg   2014-12-25   \n",
-       "6721  /gJcV7dfAW8ccwjxDPEnruFnKAyI.jpg   2014-12-30   \n",
-       "6722  /1u1mjji8WPBFGRVg5xhVwG9dlhm.jpg   2014-12-30   \n",
-       "6723   /d5csriJUa3Evyv8r2IJANnuJlE.jpg   2014-12-31   \n",
+       "6722  /m0QWz9J6wy7vCYpWH9pMR8JPOLZ.jpg   2014-12-25   \n",
+       "6723  /pKbOLUANgHiiSjC7qs6AXfzW9cX.jpg   2014-12-25   \n",
+       "6724  /gJcV7dfAW8ccwjxDPEnruFnKAyI.jpg   2014-12-30   \n",
+       "6725  /1u1mjji8WPBFGRVg5xhVwG9dlhm.jpg   2014-12-30   \n",
+       "6726   /d5csriJUa3Evyv8r2IJANnuJlE.jpg   2014-12-31   \n",
        "\n",
        "                          title  vote_average  vote_count  \n",
-       "6719                       언브로큰           7.5        3356  \n",
-       "6720                  아메리칸 스나이퍼           7.4       10650  \n",
-       "6721            우먼 인 블랙: 죽음의 천사           5.2         857  \n",
-       "6722                  모스트 바이어런트           6.6        1121  \n",
-       "6723  Une heure de tranquillité           5.3         280  "
+       "6722                       언브로큰           7.5        3357  \n",
+       "6723                  아메리칸 스나이퍼           7.4       10658  \n",
+       "6724            우먼 인 블랙: 죽음의 천사           5.2         858  \n",
+       "6725                  모스트 바이어런트           6.6        1124  \n",
+       "6726  Une heure de tranquillité           5.3         280  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +254,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>movie_id</th>\n",
        "      <th>popularity</th>\n",
        "      <th>vote_average</th>\n",
@@ -271,85 +263,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6724.000000</td>\n",
-       "      <td>6724.000000</td>\n",
-       "      <td>6724.000000</td>\n",
-       "      <td>6724.000000</td>\n",
-       "      <td>6724.000000</td>\n",
+       "      <td>6727.000000</td>\n",
+       "      <td>6727.000000</td>\n",
+       "      <td>6727.000000</td>\n",
+       "      <td>6727.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3361.500000</td>\n",
-       "      <td>324646.922070</td>\n",
-       "      <td>32.573473</td>\n",
-       "      <td>6.457481</td>\n",
-       "      <td>1121.576294</td>\n",
+       "      <td>324734.950795</td>\n",
+       "      <td>34.289864</td>\n",
+       "      <td>6.458094</td>\n",
+       "      <td>1121.756355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1941.195937</td>\n",
-       "      <td>192350.383993</td>\n",
-       "      <td>186.265384</td>\n",
-       "      <td>0.857881</td>\n",
-       "      <td>2355.266731</td>\n",
+       "      <td>192409.746498</td>\n",
+       "      <td>229.857375</td>\n",
+       "      <td>0.857943</td>\n",
+       "      <td>2355.974949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
        "      <td>189.000000</td>\n",
        "      <td>0.600000</td>\n",
        "      <td>2.100000</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>92.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1680.750000</td>\n",
-       "      <td>148165.750000</td>\n",
-       "      <td>8.565250</td>\n",
+       "      <td>148274.500000</td>\n",
+       "      <td>8.710000</td>\n",
        "      <td>5.900000</td>\n",
        "      <td>161.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>3361.500000</td>\n",
-       "      <td>333383.000000</td>\n",
-       "      <td>12.230500</td>\n",
+       "      <td>333385.000000</td>\n",
+       "      <td>12.473000</td>\n",
        "      <td>6.500000</td>\n",
-       "      <td>306.000000</td>\n",
+       "      <td>305.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>5042.250000</td>\n",
-       "      <td>465091.750000</td>\n",
-       "      <td>22.416750</td>\n",
+       "      <td>465122.500000</td>\n",
+       "      <td>23.116000</td>\n",
        "      <td>7.100000</td>\n",
        "      <td>892.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>6723.000000</td>\n",
        "      <td>877183.000000</td>\n",
-       "      <td>11363.811000</td>\n",
+       "      <td>15909.335000</td>\n",
        "      <td>9.300000</td>\n",
-       "      <td>30291.000000</td>\n",
+       "      <td>30305.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0       movie_id    popularity  vote_average    vote_count\n",
-       "count  6724.000000    6724.000000   6724.000000   6724.000000   6724.000000\n",
-       "mean   3361.500000  324646.922070     32.573473      6.457481   1121.576294\n",
-       "std    1941.195937  192350.383993    186.265384      0.857881   2355.266731\n",
-       "min       0.000000     189.000000      0.600000      2.100000    100.000000\n",
-       "25%    1680.750000  148165.750000      8.565250      5.900000    161.000000\n",
-       "50%    3361.500000  333383.000000     12.230500      6.500000    306.000000\n",
-       "75%    5042.250000  465091.750000     22.416750      7.100000    892.000000\n",
-       "max    6723.000000  877183.000000  11363.811000      9.300000  30291.000000"
+       "            movie_id    popularity  vote_average    vote_count\n",
+       "count    6727.000000   6727.000000   6727.000000   6727.000000\n",
+       "mean   324734.950795     34.289864      6.458094   1121.756355\n",
+       "std    192409.746498    229.857375      0.857943   2355.974949\n",
+       "min       189.000000      0.600000      2.100000     92.000000\n",
+       "25%    148274.500000      8.710000      5.900000    161.000000\n",
+       "50%    333385.000000     12.473000      6.500000    305.000000\n",
+       "75%    465122.500000     23.116000      7.100000    892.000000\n",
+       "max    877183.000000  15909.335000      9.300000  30305.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,6 +368,37 @@
      "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.groupby(by=\"release_date\")['popularity'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "release_date\n",
+       "2010-01-01       9.9115\n",
+       "2010-01-05       6.4670\n",
+       "2010-01-07       6.6940\n",
+       "2010-01-08      39.4690\n",
+       "2010-01-11      28.0180\n",
+       "                ...    \n",
+       "2021-11-04    3210.4065\n",
+       "2021-11-05      73.5900\n",
+       "2021-11-10    3129.2060\n",
+       "2021-11-11     333.6525\n",
+       "2021-11-12    1611.8755\n",
+       "Name: popularity, Length: 2686, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
