--- a/scripts/team3_data_collection_movie.ipynb
+++ b/scripts/team3_data_collection_movie.ipynb
@@ -20,7 +20,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 영화정보 크롤링 후 csv파일로 저장"
+    "# 1. 영화정보 크롤링 후 csv파일로 저장(10000개씩)\n",
+    "def crawling(idx):    \n",
+    "    import json\n",
+    "    import pandas as pd\n",
+    "    import requests\n",
+    "    import time\n",
+    "\n",
+    "    start = idx\n",
+    "    end = idx + 9999\n",
+    "    popular_movies = []\n",
+    "    for i in range(start, end):\n",
+    "        url=\"https://api.themoviedb.org/3/movie/{0}?api_key={1}&language=ko-KR\".format(i,'api-key')\n",
+    "        response = requests.get(url)\n",
+    "        popular_movies.append(json.loads(response.content))\n",
+    "        \n",
+    "\n",
+    "    popular_movies\n",
+    "    tmdbmovielist = pd.DataFrame(popular_movies)\n",
+    "    tmdbmovielist.to_csv(\"../data-files/tmdbmovielist({0}-{1}).csv\".format(start, end), header=True, index=True)"
    ]
   },
   {
